Changed pitching hand font size to fix overflow problem. Just a quick lazy fix, need to change layout

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -287,7 +287,7 @@ h3 {
 .barhpdata {
   padding:25px;
   color:White;
-  font-size:40px;
+  font-size:36px;
   font-family:"Moon";
   font-weight:bold;
 }
